# RAG-Research-Agent

./: .env.example  .gitignore  README.md  get_embedding.py  hf_docs.py  langgraph.json  llama3.1_hf_qdrant.txt  output_How to create a custom huggingface pipeline object?.md  output_What are the FAANG companies?.md  output_What's Model Context Protocol?.md  pyproject.toml  rag.py  rag_results.txt  retriever.py  splitter.py  whisper.py
model/: llm.py
src/rag/: get_embedding.py  hf_docs.py  loader.py  rag.py  retriever.py  whisper.py
src/research_agent/: configuration.py  graph.py  prompts.py  rag.py  state.py  utils.py
